# c2-rust

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml
proto/: implant.proto
src/: lib.rs
src/admin/: mod.rs  service.rs
src/implant/: mod.rs  service.rs
